crates/dsql-core/tests/it/snapshots/it__sql__aggregates_render_root_and_nested_objects_without_safety_caps.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: render_sql(&bowl).await
---
-- by_email
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'email_group',
        "by_email_74e58642_groups_efee4319"."email_group",
        'count',
        "by_email_74e58642_groups_efee4319"."count",
        'earliest_signup',
        "by_email_74e58642_groups_efee4319"."earliest_signup"
      )
    ),
    '[]'
  ) as "by_email"
from
  (
    select
      "by_email_74e58642"."email" as "email_group",
      COUNT(*) as "count",
      MIN("by_email_74e58642"."created_at") as "earliest_signup"
    from
      "public"."users" as "by_email_74e58642"
    group by
      "by_email_74e58642"."email"
  ) as "by_email_74e58642_groups_efee4319"

-- stats
select
  JSON_BUILD_OBJECT(
    'count',
    COUNT(*),
    'populated_email',
    COUNT("stats_fdeedab3"."email"),
    'any',
    COUNT(*) > 0,
    'first_name',
    MIN("stats_fdeedab3"."name"),
    'latest_signup',
    MAX("stats_fdeedab3"."created_at")
  ) as "stats"
from
  "public"."users" as "stats_fdeedab3"
where
  "stats_fdeedab3"."email" <> (null)

-- users
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'id',
        "users_99fc7350"."id",
        'post_stats',
        "post_stats_json_f1ab13d3"."post_stats_result_f1ab13d3",
        'post_groups',
        "post_groups_json_412749f0"."post_groups_result_412749f0"
      )
    ),
    '[]'
  ) as "users"
from
  (
    select
      *
    from
      "public"."users" as "users_99fc7350"
    limit
      2
  ) as "users_99fc7350"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'count',
        COUNT(*),
        'latest',
        MAX("post_stats_f1ab13d3"."created_at")
      ) as "post_stats_result_f1ab13d3"
    from
      "public"."posts" as "post_stats_f1ab13d3"
    where
      "post_stats_f1ab13d3"."user_id" = "users_99fc7350"."id"
      and ("post_stats_f1ab13d3"."title" like '%x%')
  ) as "post_stats_json_f1ab13d3" on true
  left join LATERAL (
    select
      COALESCE(
        JSON_AGG(
          JSON_BUILD_OBJECT(
            'title_group',
            "post_groups_412749f0_groups_94123404"."title_group",
            'count',
            "post_groups_412749f0_groups_94123404"."count",
            'latest',
            "post_groups_412749f0_groups_94123404"."latest"
          )
        ),
        '[]'
      ) as "post_groups_result_412749f0"
    from
      (
        select
          "post_groups_412749f0"."title" as "title_group",
          COUNT(*) as "count",
          MAX("post_groups_412749f0"."created_at") as "latest"
        from
          "public"."posts" as "post_groups_412749f0"
        where
          "post_groups_412749f0"."user_id" = "users_99fc7350"."id"
        group by
          "post_groups_412749f0"."title"
      ) as "post_groups_412749f0_groups_94123404"
  ) as "post_groups_json_412749f0" on true
