crates/dsql-core/tests/it/snapshots/it__sql__cross_file_fragment_body_edits_rederive_sql.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: after
---
-- UsesBits
select
  "root"."title" as "title"
from
  (
    select
      1) as "singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT('title', "title_d4d9f554"."title") as "title"
    from
      "public"."title" as "title_d4d9f554"
    limit
      1
  ) as "root" on true
