crates/dsql-core/tests/it/snapshots/it__sql__exact_and_floating_numbers_use_their_public_wire_types.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: render_sql(&bowl).await
---
-- metrics
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'amount',
        CAST("metrics_b773e828"."amount" as text),
        'ratio',
        "metrics_b773e828"."ratio"
      )
    ),
    '[]'
  ) as "metrics"
from
  (
    select
      *
    from
      "public"."metrics" as "metrics_b773e828"
    where
      "metrics_b773e828"."amount" >= 12345678901234567890.12345678901234567890
    limit
      10
  ) as "metrics_b773e828"
