crates/dsql-core/tests/it/snapshots/it__sql__flattened_objects_export_fields_without_wrapper_keys.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: render_sql(&bowl).await
---
-- FlattenOwner
select
  "dsql_root"."feed" as "feed"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'id',
        "feed_ed7b7225"."id",
        'owner_name',
        "users_json_df293de7"."owner_name",
        'recent',
        "users_json_df293de7"."recent"
      ) as "feed"
    from
      "public"."posts" as "feed_ed7b7225"
      left join LATERAL (
        select
          "users_df293de7"."name" as "owner_name",
          "recent_json_29571ef9"."recent_result_29571ef9" as "recent"
        from
          "public"."users" as "users_df293de7"
          left join LATERAL (
            select
              JSON_BUILD_OBJECT('title', "recent_29571ef9"."title") as "recent_result_29571ef9"
            from
              "public"."posts" as "recent_29571ef9"
            where
              "recent_29571ef9"."user_id" = "users_df293de7"."id"
            limit
              1
          ) as "recent_json_29571ef9" on true
        where
          "users_df293de7"."id" = "feed_ed7b7225"."user_id"
          and ("users_df293de7"."name" like $1)
      ) as "users_json_df293de7" on true
    limit
      1
  ) as "dsql_root" on true
-- parameters: params.owner

-- FlattenPostStats
select
  "dsql_root"."accounts" as "accounts"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'id',
        "accounts_c1b9ad84"."id",
        'post_count',
        "posts_json_cd19cb80"."post_count",
        'latest_post',
        "posts_json_cd19cb80"."latest_post"
      ) as "accounts"
    from
      "public"."users" as "accounts_c1b9ad84"
      left join LATERAL (
        select
          COUNT(*) as "post_count",
          MAX("posts_cd19cb80"."created_at") as "latest_post"
        from
          "public"."posts" as "posts_cd19cb80"
        where
          "posts_cd19cb80"."user_id" = "accounts_c1b9ad84"."id"
          and ("posts_cd19cb80"."title" like $1)
      ) as "posts_json_cd19cb80" on true
    limit
      1
  ) as "dsql_root" on true
-- parameters: params.title

-- FlattenRoot
select
  TO_JSON(COUNT(*)) as "user_count",
  TO_JSON(MIN("users_99fc7350"."name")) as "first_name"
from
  "public"."users" as "users_99fc7350"
where
  "users_99fc7350"."name" = ($1)
-- parameters: params.root_name
